[package]
name = "sycamore-wordle"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9.1"
sycamore = "0.9.1"

[dependencies.web-sys]
features = [
    "HtmlButtonElement",
    "HtmlElement",
    "HtmlInputElement",
    "Location",
    "Storage",
]
version = "0.3.77"
